# rs-distributed-stats

./: Cargo.toml  LICENCE  README.md  build.rs  simulate.sh
db/: csv2sqlite.py
log/: client_data_z1.csv  client_data_z2.csv  client_data_z3.csv  client_data_z4.csv  client_data_z5.csv
performance_analysis/: viz_script.py
proto/: statservice.proto
request_files/: client_1.txt  client_2.txt  client_3.txt  client_4.txt  client_5.txt  gen_request_files.py  test.txt
src/: client.rs  main.rs  server.rs
